[선웅제] sprint11 (#118)
* spring security 의존성 추가

* 프론트엔드 파일 변경

* logging level 설정

* spring security 설정 추가

* CSR용 CSRF 토큰 핸들러 추가

* CSRF 토큰을 발급하는 API를 구현

* 회원가입 PasswordEncoder 사용

* spring security 인증 객체 정의

* 사용자 정보 조회 로직 구현

* 로그인 성공 핸들러 구현

* 로그인 실패 핸들러 구현

* 컴포넌트 추가

* 기존 로직 제거

* 세션을 활용한 현재 사용자 정보 조회 api 구현

* spring security 로그아웃 설정 적용

* 일반 요구사항 : 인가 권한 정의 적용

* 일반 요구사항 : 인가 권한 적용

* user status 관련 코드 제거

* 심화 기능 : 세션 관리 고도화 적용

* 심화 기능 : remember-me 기능 적용

* 심화 기능 : 권한 적용 고도화 적용

* 모범답안으로 변경

* 버전 업, FE 리소스 변경

* JWT 컴포넌트 구현

* 리팩토링 - 로그인

* JWT 인증 필터 구현

* 리프레시 토큰을 활용한 엑세스 토큰 재발급

* 리팩토링 - 로그아웃

* 리팩토링 - 토큰 상태 관리 중간

* 리팩토링 - 토큰 상태 관리

* 리뷰 수정사항 반영

* 정답지 코드로 교체

* 프론트 리소스 변경

* Spring Event - 파일 업로드 로직 분리

* Spring Event - 알림 기능 추가

* 비동기 적용

* 비동기 실패 처리

* 캐시 적용하기

* Kafka 도입

* Redis 도입

* 충돌 수정

* 리뷰 반영 리팩토링