@@ -9,11 +9,13 @@ import com.nimbusds.jose.crypto.MACSigner;
 import com.nimbusds.jose.crypto.MACVerifier;
 import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.SignedJWT;
+import com.sprint.mission.discodeit.dto.data.UserDto;
 import com.sprint.mission.discodeit.security.DiscodeitUserDetails;
 import jakarta.servlet.http.Cookie;
 import java.nio.charset.StandardCharsets;
 import java.util.Date;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
@@ -23,31 +25,22 @@ import org.springframework.stereotype.Component;
 @Component
 public class JwtTokenProvider {
 
-  public static final String REFRESH_TOKEN_COOKIE_NAME = "REFRESH-TOKEN";
+  public static final String REFRESH_TOKEN_COOKIE_NAME = "REFRESH_TOKEN";
 
-  @Value("${jwt.cookie.secure:true}")
-  private boolean cookieSecure;
-
-  // 액세스 토큰의 만료 시간(밀리초 단위)
   private final int accessTokenExpirationMs;
-  // 리프레시 토큰의 만료 시간(밀리초 단위)
   private final int refreshTokenExpirationMs;
 
-  // 액세스 토큰을 서명하기 위한 서명자
   private final JWSSigner accessTokenSigner;
-  // 액세스 토큰의 서명을 검증하기 위한 검증자
   private final JWSVerifier accessTokenVerifier;
-  // 리프레시 토큰을 서명하기 위한 서명자
   private final JWSSigner refreshTokenSigner;
-  // 리프레시 토큰의 서명을 검증하기 위한 검증자
   private final JWSVerifier refreshTokenVerifier;
 
   public JwtTokenProvider(
-      @Value("${jwt.access-token.secret}") String accessTokenSecret,
-      @Value("${jwt.access-token.exp}") int accessTokenExpirationMs,
-      @Value("${jwt.refresh-token.secret}") String refreshTokenSecret,
-      @Value("${jwt.refresh-token.exp}") int refreshTokenExpirationMs
-  ) throws JOSEException {
+      @Value("${discodeit.jwt.access-token.secret}") String accessTokenSecret,
+      @Value("${discodeit.jwt.access-token.expiration-ms}") int accessTokenExpirationMs,
+      @Value("${discodeit.jwt.refresh-token.secret}") String refreshTokenSecret,
+      @Value("${discodeit.jwt.refresh-token.expiration-ms}") int refreshTokenExpirationMs)
+      throws JOSEException {
 
     this.accessTokenExpirationMs = accessTokenExpirationMs;
     this.refreshTokenExpirationMs = refreshTokenExpirationMs;
@@ -69,82 +62,75 @@ public class JwtTokenProvider {
     return generateToken(userDetails, refreshTokenExpirationMs, refreshTokenSigner, "refresh");
   }
 
-  private String generateToken(
-      DiscodeitUserDetails userDetails,
-      int expirationMs,
-      JWSSigner signer,
-      String tokenType
-  )
-      throws JOSEException {
+  private String generateToken(DiscodeitUserDetails userDetails, int expirationMs, JWSSigner signer,
+      String tokenType) throws JOSEException {
     String tokenId = UUID.randomUUID().toString();
+    UserDto user = userDetails.getUserDto();
 
     Date now = new Date();
     Date expiryDate = new Date(now.getTime() + expirationMs);
 
     JWTClaimsSet claimsSet = new JWTClaimsSet.Builder()
-        .subject(userDetails.getUsername())
+        .subject(user.username())
         .jwtID(tokenId)
+        .claim("userId", user.id().toString())
         .claim("type", tokenType)
-        .claim("roles",
-            userDetails.getAuthorities()
-                .stream()
-                .map(GrantedAuthority::getAuthority)
-                .toList())
+        .claim("roles", userDetails.getAuthorities().stream()
+            .map(GrantedAuthority::getAuthority)
+            .collect(Collectors.toList()))
         .issueTime(now)
         .expirationTime(expiryDate)
         .build();
 
-    SignedJWT signedJWT = new SignedJWT(new JWSHeader(JWSAlgorithm.HS256), claimsSet);
-    signedJWT.sign(signer);
-    return signedJWT.serialize();
-  }
+    SignedJWT signedJWT = new SignedJWT(
+        new JWSHeader(JWSAlgorithm.HS256),
+        claimsSet
+    );
 
-  public Cookie generateRefreshTokenCookie(String refreshToken) {
-    Cookie cookie = new Cookie(REFRESH_TOKEN_COOKIE_NAME, refreshToken);
-    cookie.setHttpOnly(true);
-    cookie.setSecure(cookieSecure);
-    cookie.setPath("/");
-    cookie.setMaxAge(refreshTokenExpirationMs / 1000);
-    return cookie;
+    signedJWT.sign(signer);
+    String token = signedJWT.serialize();
+
+    log.debug("Generated {} token for user: {}", tokenType, user.username());
+    return token;
   }
 
   public boolean validateAccessToken(String token) {
     return validateToken(token, accessTokenVerifier, "access");
   }
 
+  public boolean validateRefreshToken(String token) {
+    return validateToken(token, refreshTokenVerifier, "refresh");
+  }
+
   private boolean validateToken(String token, JWSVerifier verifier, String expectedType) {
     try {
       SignedJWT signedJWT = SignedJWT.parse(token);
 
-      // 서명 검증
+      // Verify signature
       if (!signedJWT.verify(verifier)) {
-        log.debug("{} 토큰 서명 검증 실패", expectedType);
+        log.debug("JWT signature verification failed for {} token", expectedType);
         return false;
       }
 
-      // 토큰 타입 체크 (access인지 refresh인지)
+      // Check token type
       String tokenType = (String) signedJWT.getJWTClaimsSet().getClaim("type");
       if (!expectedType.equals(tokenType)) {
-        log.debug("토큰 타입 불일치: 기대값={}, 실제값={}", expectedType, tokenType);
+        log.debug("JWT token type mismatch: expected {}, got {}", expectedType, tokenType);
         return false;
       }
 
-      // 만료 시간 체크
+      // Check expiration
       Date expirationTime = signedJWT.getJWTClaimsSet().getExpirationTime();
       if (expirationTime == null || expirationTime.before(new Date())) {
-        log.debug("{} 토큰 만료됨", expectedType);
+        log.debug("JWT {} token expired", expectedType);
         return false;
       }
 
       return true;
     } catch (Exception e) {
-      log.debug("{} 토큰 검증 중 예외 발생: {}", expectedType, e.getMessage());
+      log.debug("JWT {} token validation failed: {}", expectedType, e.getMessage());
       return false;
     }
-  }
-
-  public boolean validateRefreshToken(String token) {
-    return validateToken(token, refreshTokenVerifier, "refresh");
   }
 
   public String getUsernameFromToken(String token) {
@@ -152,7 +138,48 @@ public class JwtTokenProvider {
       SignedJWT signedJWT = SignedJWT.parse(token);
       return signedJWT.getJWTClaimsSet().getSubject();
     } catch (Exception e) {
-      throw new IllegalArgumentException("토큰에서 사용자 정보를 추출할 수 없습니다.", e);
+      throw new IllegalArgumentException("Invalid JWT token", e);
     }
+  }
+
+  public String getTokenId(String token) {
+    try {
+      SignedJWT signedJWT = SignedJWT.parse(token);
+      return signedJWT.getJWTClaimsSet().getJWTID();
+    } catch (Exception e) {
+      throw new IllegalArgumentException("Invalid JWT token", e);
+    }
+  }
+
+  public UUID getUserId(String token) {
+    try {
+      SignedJWT signedJWT = SignedJWT.parse(token);
+      String userIdStr = (String) signedJWT.getJWTClaimsSet().getClaim("userId");
+      if (userIdStr == null) {
+        throw new IllegalArgumentException("User ID claim not found in JWT token");
+      }
+      return UUID.fromString(userIdStr);
+    } catch (Exception e) {
+      throw new IllegalArgumentException("Invalid JWT token", e);
+    }
+  }
+
+  public Cookie genereateRefreshTokenCookie(String refreshToken) {
+    // Set refresh token in HttpOnly cookie
+    Cookie refreshCookie = new Cookie(REFRESH_TOKEN_COOKIE_NAME, refreshToken);
+    refreshCookie.setHttpOnly(true);
+    refreshCookie.setSecure(true); // Use HTTPS in production
+    refreshCookie.setPath("/");
+    refreshCookie.setMaxAge(refreshTokenExpirationMs / 1000);
+    return refreshCookie;
+  }
+
+  public Cookie genereateRefreshTokenExpirationCookie() {
+    Cookie refreshCookie = new Cookie(REFRESH_TOKEN_COOKIE_NAME, "");
+    refreshCookie.setHttpOnly(true);
+    refreshCookie.setSecure(true); // Use HTTPS in production
+    refreshCookie.setPath("/");
+    refreshCookie.setMaxAge(0);
+    return refreshCookie;
   }
 }
